# evidentia

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  FINAL_WINNER_REPORT.md  IMPLEMENTATION_REPORT.md  README.md  REMAINING_RISKS.md  package-lock.json  pyproject.toml
docs/: CASES_SCHEMA.md
scripts/: e2e_deadline_probe.py
src/audit_compiler/: __init__.py  admission.py  casebuilder.py  cli.py  compiler.py  duckdb_store.py  inventory.py  models.py  normalization.py  pipeline.py
tests/: conftest.py  test_admission.py  test_admission_contracts.py  test_agent_tools.py  test_ai_summary.py  test_architecture.py  test_browser_upload_flow.py  test_canonical_runtime.py  test_cognee_memory.py  test_controls_regression.py  test_duckdb_store.py  test_e2e_deadline_probe.py  test_gdpdu.py  test_inventory.py  test_investigation_api.py  test_investigation_evidence_endpoint.py  test_investigation_loop.py  test_investigation_messages_grounded.py  test_investigation_models.py  test_models.py  test_mutation.py  test_no_hardcoding.py  test_normalization.py  test_partners.py  test_split_payments.py  test_xlsx.py
tests/controls/: test_anomaly_discovery.py  test_capitalization.py  test_control_allowlist.py  test_cutoff.py  test_three_way_match.py  test_vendor_integrity.py
web/: cases.sample.json  investigation.sample.json  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AppHeader.tsx  CalculationBlock.tsx  CaseBoard.tsx  CaseCard.tsx  CounterTestsTable.tsx  EngagementHeader.tsx  EvidenceChain.tsx  EvidenceGraph.tsx  (+5 more)
(+73 files in other folders)
