[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "admissible"
version = "0.1.0"
description = "Evidence-first audit compiler foundations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "openpyxl>=3.1,<4",
  "pydantic>=2.7,<3",
  "python-docx>=1.1",
  "pymupdf>=1.24",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "openai>=1.40",
  "tavily-python>=0.5",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "httpx>=0.27",
]
# Optional relationship-graph partner; imported lazily and degrades gracefully if absent.
graph = ["cognee>=0.1"]

[project.scripts]
admissible = "audit_compiler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_compiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
